fixing minor issues as:    - Collection page now will hide the collection name if it is too big, keeping the layout stable    - Change menu entry to "Add & Edit Cards", so it is more user-friendly

--- a/src/app/public/collection/collection.component.scss
+++ b/src/app/public/collection/collection.component.scss
@@ -165,3 +165,10 @@
   justify-content: space-between;
   align-items: stretch;
 }
+
+.truncate {
+  width:55%;
+  white-space:nowrap;
+  overflow:hidden;
+  text-overflow: ellipsis;
+}
